# glitch_core

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README_LLM_SETUP.md  README_SETUP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  pyproject.toml  test_export.py
config/events/: minimal_events.yaml  neutral_events.yaml  stress_events.yaml
config/experiments/: clinical_thresholds.yaml  drift_detection.yaml  mechanistic_analysis.yaml  personality_drift.yaml  simulation_timing.yaml
config/personas/: alfred_baseline.yaml  kara_baseline.yaml  marcus_baseline.yaml  test_persona_baseline.yaml
config/simulation/: experimental_design.yaml
data/exports/: simulation_export_20250730_130320.json  simulation_export_20250730_131117.json  simulation_export_20250730_131141.json  simulation_export_20250730_153812.json  simulation_export_20250730_203109.json
data/results/sim_34dcaa0b/: export_manifest_sim_34dcaa0b.json
data/results/sim_6c07e692/: export_manifest_sim_6c07e692.json
data/results/sim_787987f7/: export_manifest_sim_787987f7.json
data/results/sim_dd657ad5/: export_manifest_sim_dd657ad5.json
data/results/sim_e2225be3/: export_manifest_sim_e2225be3.json
docs/: README.md  api-reference.md  architecture.md  deployment-guide.md  developer-guide.md  devlopment_readme.md  ollama_setup.md  phase5_completion_summary.md  research_methodology.md  scientist-guide.md  troubleshooting.md  user_guides.md
docs/developer/: api-reference.md  architecture.md  development-guide.md  getting-started.md  ollama_setup.md  testing-guide.md
docs/researcher/: configuration-guide.md  experiment_template.md  research-overview.md
experiments/: phase2_demo.py
frontend/: app.js  index.html  style.css  test_websocket.html
lab_journal/: 00_idea.md  01_intial_setup.md  02_models.md  04_llm_and_persona_engine.md  05_psy_assessment.md  06_mecha.md  07_simulation.md  08_dashboard.md  09_statistics.md  0_idea.md  10_consistency_check.md  11_simulation_runs.md  1_intial_setup.md
monitoring/: prometheus.yml
nginx/: api.conf  nginx.conf
notebooks/: trauma_mk1.ipynb  trauma_vs_control.md
notebooks/01_exploratory_analysis/: 01_persona_baseline_analysis.py  persona_baseline_analysis.ipynb
notebooks/03_research_paper/: descriptive_statistics.ipynb
notebooks/03_simulation_analysis/: 01_longitudinal_trends.py  longitudinal_trends.ipynb
notebooks/04_research_paper/: 01_descriptive_statistics.py
scenarios/: README.md  __init__.py  base_scenario.py  run_all_scenarios.py  test_scenario_structure.py  trauma_response_analysis.py
scenarios/results/: trauma_response_analysis_20250727_104050.json  trauma_response_analysis_analysis_20250727_104050.json
scripts/: dev-setup.sh  enable_gpu_acceleration.sh  optimize_performance.sh  prod-deploy.sh  quick_setup.sh  restart_with_metal_gpu.sh  run_persona_test.py  run_simulation.py  setup_ollama.py  start-api.sh  test_llm.py  test_mechanistic_analysis.py  test_simulation.py
src/: __init__.py  main.py
src/analysis/: __init__.py  cross_condition_analyzer.py  data_export.py  longitudinal_analyzer.py  statistical_analyzer.py  visualization_toolkit.py
src/api/: __init__.py  app.py
src/api/routes/: data.py  monitoring.py  simulation.py  websocket.py
src/assessment/: __init__.py  clinical_interpreter.py  psychiatric_scales.py  response_analyzer.py
src/core/: config.py  exceptions.py  experiment_config.py  logging.py
src/glitch_core/: __init__.py
src/glitch_core/api/: __init__.py  main.py
src/glitch_core/config/: __init__.py  logging.py  (+2 more)
src/interpretability/: __init__.py  circuit_tracker.py  drift_detector.py  intervention_engine.py  mechanistic_analyzer.py  visualizer.py
src/models/: __init__.py  assessment.py  events.py  mechanistic.py  persona.py  simulation.py
src/services/: assessment_service.py  event_generator.py  llm_service.py  memory_service.py  ollama_service.py  persona_manager.py  simulation_engine.py
src/storage/: __init__.py  file_storage.py  qdrant_client.py  redis_client.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_drift_engine.py  test_drift_engine_integration.py  test_llm_integration.py  test_logging.py  test_memory_integration.py  test_phase2_implementation.py
tests/integration/: test_api_endpoints.py  test_simulation_flow.py
tests/unit/: test_assessment_scales.py  test_llm_service.py  test_mechanistic_analysis.py  test_persona_manager.py  test_persona_models.py  test_psychiatric_scales.py  test_response_analyzer.py
(+218 files in other folders)
